--- a/css/index.css
+++ b/css/index.css
@@ -1,6 +1,5 @@
 *{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    
     font-weight: 600;
 }
 
@@ -21,7 +20,6 @@ main{
     flex-direction: row;
 }
 
-
 .bigText{
     font-size:xxx-large;
     margin: 0;
@@ -29,12 +27,19 @@ main{
 }
 .list-group-item{
     margin-bottom: 2%;
+    border-bottom:1px solid #ff7B00 !important;
+}
+
+.personComputer{
+    height: 10%;
+    width: 70%;
+    border-radius: 20px;
 }
 
 form{
     background-color: #FFFFFF;
     padding: 10%;
-    border-radius: 8%;
+    border-radius: 20px;
     color:#000000;
     width: 100%;
     margin-top: 15%;
